# kimi-gui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  HANDOFF.md  README.md  ROADMAP.md  latest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
.upstream/: PATCHES.md  UPSTREAM_BASELINE.txt  sync.sh
docs/superpowers/specs/: 2026-07-18-kimi-gui-design.md
prototype/: README.md  approval.html  diff.html  index.html  multi-agent.html  running.html  settings.html  steer-feedback.html
prototype/mock/: shared.js
prototype/styles/: base.css  composer.css  diff.css  sidebar.css  thinking.css
scripts/: make-dmg.sh
sigs/: Kimi.Code_1.0.2_x64-setup.exe.sig  Kimi.Code_aarch64.app.tar.gz.sig
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: daemon.rs  dock_badge.rs  lib.rs  main.rs  shortcut.rs  tray.rs  usage.rs
updates/: latest.json
web/: README.md  app.html  codex.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: env.d.ts  main.ts
web/src/api/: config.ts  types.ts
web/src/api/daemon/: agentEventProjector.ts  client.ts  mappers.ts  wire.ts
web/src/codex-app/: CodexApp.vue  main.ts
web/src/codex-demo/: DemoApp.vue  main.ts  mock.ts
web/src/components/: FilePreview.vue
web/src/components/chat/: Composer.vue  Markdown.vue
web/src/components/codex/: AppShell.vue
web/src/components/codex/agents/: AgentPanel.vue  AgentTranscript.vue  SubagentCard.vue
web/src/components/codex/approval/: ApprovalCard.vue  approvalMapper.ts
web/src/components/codex/chat/: ConversationPane.vue  MessageAssistant.vue  MessageUser.vue  ThinkingBlock.vue  TodoCard.vue  ToolCallCard.vue  TurnProgress.vue
web/src/components/codex/composer/: Composer.vue  ComposerModes.vue  ContextMeter.vue  MentionMenu.vue  ModePicker.vue  ModelPicker.vue  PermPicker.vue  QueuePanel.vue  SlashMenu.vue
web/src/components/codex/detail/: DetailPane.vue
web/src/components/codex/diff/: DiffLines.vue  DiffView.vue  ReviewPane.vue  diffMapper.ts
web/src/components/codex/layout/: CodexIcon.vue  CommandPalette.vue  FileMenu.vue  PromptDialog.vue  SideTask.vue  ThreadMenu.vue  Toast.vue  UpdateDialog.vue  WorkspacePicker.vue
web/src/components/codex/settings/: SettingsPage.vue
web/src/components/codex/sidebar/: AccountRow.vue  Sidebar.vue  StatusFilter.vue  ThreadRow.vue  WorkspaceGroup.vue  threadStatus.ts
web/src/components/mobile/: MobileSettingsSheet.vue
web/src/composables/: useFilePreview.ts  useKimiWebClient.ts
web/src/composables/client/: useModelProviderState.ts  useSideChat.ts  useWorkspaceState.ts
web/src/composables/codex/: useAccount.ts  useHotkeys.ts  useKimiClient.ts  useTauriDaemon.ts  useTheme.ts  useUIState.ts  useUpdater.ts
web/src/i18n/locales/en/: filePreview.ts  status.ts
web/src/i18n/locales/zh/: filePreview.ts  status.ts
web/src/lib/: modelThinking.test.ts  modelThinking.ts  storage.ts
web/src/styles/: approval.css  base.css  composer.css  conversation.css  detail.css  diff.css  settings.css  sidebar.css  thinking.css  tokens.css
web/src/types/: codex.ts
web/test/: event-reducer.test.ts  side-chat.test.ts  turn-logic.test.ts  workspace-state.test.ts
