[package]
name = "kimi-gui"
version = "0.2.0"
description = "Kimi Code native desktop client"
authors = ["kimi-gui"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "kimi_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ⚠️ 不要在 features 里加 "custom-protocol"!
# Tauri 用 custom-protocol feature 判断 dev/prod 模式:
#   - 不启用(默认)= dev 模式 → webview 走 devUrl(http://localhost:5175)
#   - 启用(custom-protocol) = prod 模式 → webview 走 frontendDist(tauri://localhost)
# `tauri build` 命令在 release 时自动注入 custom-protocol feature,不用我们手动加。
# 之前手动加了导致 dev 模式也走 frontendDist,webview 加载空白。
#
# macos-private-api: needed for transparent / pinned toast windows
# tray-icon: 系统托盘(TrayIconBuilder 等需要)
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
# 原生文件夹选择(新建任务 → 添加工作区)
tauri-plugin-dialog = "2"
# 应用自动更新(检查 GitHub Releases 的 latest.json,签名验证后下载安装)
tauri-plugin-updater = "2"
# 更新安装完成后重启应用
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 额度抓取:嵌入式 PTY 起无头 TUI 发 /usage + vt100 解析(见 src/usage.rs)
portable-pty = "0.8"
vt100 = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
# Dock badge (unread-notification count) via AppKit; Tauri 2.11 has no
# cross-platform badge API on macOS。
# 注:轮次 1 阶段尚未使用(等轮次 3 实现 set_dock_badge),先声明避免后续
# 动 Cargo.toml 引起重编译。
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
